# UniWebPlatform

./: .gitignore  AI_Chat_DataStructure.md  K3S.md  KubernetesCommand.md  LICENSE  LLM_DataStructure.md  README.md  app-command.md  docker-compose.yaml
fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  completion.py  database_utils.py  main.py  pricing.py  pyproject.toml  requirements.txt
fastapi/.run/: pytest.run.xml  uv run.run.xml
fastapi/app/: completion.py  config.py  database_utils.py  main.py  pricing.py
fastapi/app/api/: chat_router.py  completion_router.py  image_gen_router.py  message_dto.py  messages_convert_router.py  root_router.py
fastapi/app/client/: README.md  pyproject.toml  setup.py  user_client.py  user_entity.py  user_logic.py
fastapi/app/dao/: user_dao.py
fastapi/app/logic/: auth.py  completion.py  gemini.py
fastapi/app/model/: ChunkGenerator.py  generator.py  gpt_message.py  message.py
fastapi/app/repository/: db_connection.py  user.py  user_dao.py  user_entity.py  user_repository.py
fastapi/app/resources/: model_prices.json
fastapi/app/util/: db_connection.py  pricing.py  token_counter.py
fastapi/chat/: __init__.py  readme.md
fastapi/chat/client/: chat_client.py
fastapi/chat/factory/: chat_processor_factory.py  image_processor.py  message_converter.py
fastapi/chat/implementations/: non_stream_claude_processor.py  non_stream_gemini_processor.py  non_stream_gpt_processor.py  (+3 more)
fastapi/request/: chat.http  http-client.private.env.example.json  messages_convert.http
fastapi/resources/: model_prices.json
fastapi/test/: chat.http  gpt.py  gpt.test.py  http-client.private.env.json.example  image_gen.http  request.http  test.py  test_chat.py
fastapi/tests/: basic_test.py  chat_client_factory_test.py  message_preprocessor_test.py
(+1484 files in other folders)
