[project]
name = "FastAPI-UniWebPlatform"
version = "0.1.0"
description = "FastAPI for UniWebPlatform"
readme = "README.md"
dependencies = [
    "llm_bridge==1.15.3",
    "fastapi[standard]", # fastapi
    "python-dotenv", # dotenv
    "python-jose[cryptography]", # jose
    # Client
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0,<3.0.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
