[project]
name = "FastAPI-UniWebPlatform"
version = "0.1.0"
description = "FastAPI for UniWebPlatform"
readme = "README.md"
dependencies = [
    "llm_bridge==1.16.2",
    "fastapi[standard]==0.128.0", # fastapi
    "python-dotenv==1.2.1", # dotenv
    "python-jose[cryptography]==3.5.0", # jose
    # Client
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0,<3.0.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
